--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
     "fmt:check": "yarn _fmt --check"
   },
   "dependencies": {
+    "@ckb-lumos/ckb-indexer": "0.18.0",
     "@ckb-lumos/common-scripts": "0.18.0",
     "@ckb-lumos/hd": "0.18.0",
     "@ckb-lumos/helpers": "0.18.0",
-    "@ckb-lumos/ckb-indexer": "0.18.0",
     "@ckb-lumos/lumos": "0.18.0",
     "@ckitjs/ckit": "0.2.0",
-    "blake2b": "^2.1.4"
+    "blake2b": "^2.1.4",
+    "ethers": "^5.4.7"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.19.3",
     "@babel/preset-typescript": "^7.18.6",
     "@types/jest": "^29.1.1",
-    "jest": "^28.1.3",
+    "jest": "^29.1.2",
     "ts-jest": "^29.0.3"
   },
   "ava": {
