--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "docs": "typedoc .",
     "build": "rm -rf dist && tsc -p .",
-    "lint": "eslint \"**/*.ts\"",
     "test": "jest",
     "_fmt": "prettier 'src/**/*.ts' 'examples/**/*.ts' '.eslintrc.js'",
     "fmt": "yarn _fmt --write",
@@ -21,15 +20,16 @@
     "@ckb-lumos/lumos": "0.18.0",
     "@ckitjs/ckit": "0.2.0",
     "blake2b": "^2.1.4",
-    "ethers": "^5.4.7",
-    "prettier": "^2.7.1"
+    "ethers": "^5.4.7"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.19.3",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/elliptic": "^6.4.14",
     "@types/jest": "^29.1.1",
     "jest": "^29.1.2",
-    "ts-jest": "^29.0.3"
+    "ts-jest": "^29.0.3",
+    "prettier": "^2.7.1"
   },
   "ava": {
     "extensions": [
